<resources>
    <string name="app_name">SP Collection Card</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_news">News</string>
    <string name="navigation_drawer_sales_title">Sales</string>
    <string name="navigation_drawer_add_sale">Add Sale</string>
    <string name="navigation_drawer_sale_history">History</string>
    <string name="navigation_drawer_settings">Settings</string>

    <string name="action_settings">Settings</string>

    <string name="home_fragment_add_sale_button">Add Sale</string>
    <string name="home_fragment_view_history_button">View History</string>
    <string name="home_fragment_latest_news_button">Latest News</string>

    <string name="news_fragment">News Fragment</string>
    <string name="add_sale_fragment">Add Sale Fragment</string>
    <string name="sale_history_fragment">Sale History Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="paper_sale_container_title_string">Papers:</string>
    <string name="paper_sale_container_input_hint">0</string>
    <string name="fighting_fund_container_title_string">Fighting Fund:</string>
    <string name="fighting_fund_container_input_hint">0</string>
    <string name="paper_sale_form_confirm_button_text">Save</string>
    <string name="date_container_title_string">Date (DD/MM/YY) :</string>

    <string name="date_container_input_hint">Date</string>
    <string name="date_day_container_input_hint">Day</string>
    <string name="date_month_container_input_hint">Month</string>
    <string name="date_year_container_input_hint">Year</string>
    <string name="fighting_fund_sale_currency_text">£</string>
    <string name="notes_container_title_string">Notes:</string>
    <string name="paid_checkbox_container_title_string">Has this sale been paid?</string>
    <string name="notes_input_hint">Optional - add extra info about this sale</string>

    <string name="sale_history_no_items_found_text_view">No sale history available.</string>
    <string name="sale_history_list_item_notes_view_description">Notes are available for this sale</string>
    <string name="sale_history_list_item_paid_view_description">All funds from this sale have been paid in.</string>
    <string name="sale_history_list_item_paper_subtitle">papers</string>
    <string name="sale_history_list_item_fund_subtitle">raised</string>
</resources>
